# internal/models/general.go
@@ -1,5 +1,13 @@
 package models
 
+// VersionResponse represents the service version
+// @Description Service version information
+type VersionResponse struct {
+	Version string `json:"version"`
+}
+
+// HealthResponse represents the service health status
+// @Description Service health information
 type HealthResponse struct {
 	Ready     bool    `json:"ready"`
 	StartTime string  `json:"starttime"`
